<resources>
    <string name="app_name">NotePad</string>
    <string name="add_note_title_label">Title:</string>
    <string name="add_note_save_btn_text">Save</string>
    <string name="add_note_btn_text">New</string>
    <string name="add_note_saveas_btn_text">Clone</string>
    <string name="add_note_cancel_btn_text">Cancel</string>
    <string name="import_notes_btn_text">Import</string>
    <string name="export_notes_btn_text">Export</string>

    <string name="action_about">About</string>
    <string name="action_save_note">Save</string>
    <string name="action_clone_note">Clone</string>
    <string name="edit_note">Edit note</string>
    <string name="import_note">Import</string>
    <string name="export_note">Export</string>
    <string name="delete">Delete</string>
    <string name="add_new_note">Add new note</string>
    <string name="manage_exported_notes">Manage exported notes</string>
    <string name="delete_file">Delete file</string>
    <string name="export_as_text">Export as text</string>
</resources>
