<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.topyunp.notepad.MainActivity">
    <item
        android:id="@+id/delete_note"
        android:icon="@drawable/ic_menu_white_24dp"
        android:orderInCategory="10"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/add_new_note"
        android:orderInCategory="10"
        android:title="@string/add_new_note"
        app:showAsAction="never" />
    <item
        android:id="@+id/export_note"
        android:orderInCategory="10"
        android:title="@string/export_note"
        app:showAsAction="never" />
    <item
        android:id="@+id/export_as_text"
        android:orderInCategory="10"
        android:title="@string/export_as_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/manage_exported_notes"
        android:orderInCategory="10"
        android:title="@string/manage_exported_notes"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_info_outline_white_36dp"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
