<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/light_green"
    android:orientation="vertical">

    <ListView
        android:id="@+id/noteListView"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:cacheColorHint="@color/light_green"
        android:layoutAnimation="@anim/note_list_cell_layout_anim_controller"></ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_note_btn_text"
            android:textSize="18dp" />

        <Button
            android:id="@+id/importBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/import_notes_btn_text"
            android:textSize="18dp" />

        <Button
            android:id="@+id/exportBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/export_notes_btn_text"
            android:textSize="18dp" />
    </LinearLayout>

</LinearLayout>